launch-instance-in-vpc/security-group.tf
resource "aws_security_group" "ec2_sg" {
  name = "web-node"
  description = "Web Security Group"
  //vpc_id = "${var.prod-vpc}"
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }    
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
